[gd_scene load_steps=6 format=3 uid="uid://bd4qvw0srslqr"]

[ext_resource type="Script" uid="uid://7enw11duqhn4" path="res://player/wand/laser_ball.gd" id="1_8j0fo"]
[ext_resource type="Texture2D" uid="uid://c1xxyaslxl13k" path="res://addons/LaserBeam Node/NodeIcons22.png" id="2_m1oea"]
[ext_resource type="PackedScene" uid="uid://crx7kk4gj06gp" path="res://misc/hurt_box/hurt_box.tscn" id="3_e514l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m1oea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e514l"]

[node name="LaserBall" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_8j0fo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m1oea")

[node name="collision" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
shape = SubResource("CircleShape2D_m1oea")

[node name="HurtBox" parent="." instance=ExtResource("3_e514l")]
ignored_groups = Array[StringName]([&"player"])

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_e514l")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="collision" to="." method="_on_collision_area_entered"]
[connection signal="body_entered" from="collision" to="." method="_on_collision_body_entered"]
[connection signal="dealt_damage" from="HurtBox" to="." method="_on_hurt_box_dealt_damage"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="HurtBox"]
